arreglos sección documental
se agregó fotos en alta calidad

--- a/secciones/portfolio/documental/index.html
+++ b/secciones/portfolio/documental/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Display:ital,wght@1,300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
+    
     <title>Iren Faraci</title>
 </head>
 
@@ -68,77 +69,82 @@
         <div class="row">
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img src="https://i.ibb.co/TBrPVjm/documental1.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img src="https://i.ibb.co/3z9FQqj/documental1.jpg" width="450px" height="300px"> </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img src="https://i.ibb.co/wygnRPJ/documental2.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img src="https://i.ibb.co/kgz8GvJ/documental2.jpg" width="450px" height="300px"> </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img src="https://i.ibb.co/BwQBwN4/documental3.jpg" width="450px" height="300px"> </a>
+              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img src="https://i.ibb.co/BVzPHJY/documental3.jpg" width="450px" height="300px"> </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img src="https://i.ibb.co/nDRcGmF/documental4.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img src="https://i.ibb.co/FqwNj6w/documental4.jpg" width="450px" height="300px"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img src="https://i.ibb.co/j6jKWN9/documental5.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img src="https://i.ibb.co/JdhJrkC/documental5.jpg" width="450px" height="300px"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 6" data-bs-toggle="modal" data-bs-target="#modalImage6"><img src="https://i.ibb.co/Sc7Z9bk/documental6.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 6" data-bs-toggle="modal" data-bs-target="#modalImage6"><img src="https://i.ibb.co/9bBQ0ZV/documental6.jpg" width="450px" height="300px"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 7" data-bs-toggle="modal" data-bs-target="#modalImage7"><img src="https://i.ibb.co/6PmbQxK/documental7.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 7" data-bs-toggle="modal" data-bs-target="#modalImage7"><img src="https://i.ibb.co/w7WRBsW/documental7.jpg" width="450px" height="300px"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 8" data-bs-toggle="modal" data-bs-target="#modalImage8"><img src="https://i.ibb.co/VWRRPyH/documental8.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 8" data-bs-toggle="modal" data-bs-target="#modalImage8"><img src="https://i.ibb.co/VDDR5yX/documental8.jpg" width="450px" height="300px"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 9" data-bs-toggle="modal" data-bs-target="#modalImage9"><img src="https://i.ibb.co/WcwD0qm/documental9.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 9" data-bs-toggle="modal" data-bs-target="#modalImage9"><img src="https://i.ibb.co/PFF7GNh/documental9.jpg" width="450px" height="300px"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6"> <!-- CAMBIAR TAMAÑO DE IMAGEN 10-->
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 10" data-bs-toggle="modal" data-bs-target="#modalImage10"><img src="https://i.ibb.co/FxVdSHL/documental10.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 10" data-bs-toggle="modal" data-bs-target="#modalImage10"><img src="https://i.ibb.co/Rz3qZ46/documental10.jpg" width="450px" height="300px"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 11" data-bs-toggle="modal" data-bs-target="#modalImage11"><img src="https://i.ibb.co/5RP4T0w/documental11.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 11" data-bs-toggle="modal" data-bs-target="#modalImage11"><img src="https://i.ibb.co/d7sTZHM/documental11.jpg" width="450px" height="300px"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 12" data-bs-toggle="modal" data-bs-target="#modalImage12"><img src="https://i.ibb.co/MhB7w6c/documental12.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 12" data-bs-toggle="modal" data-bs-target="#modalImage12"><img src="https://i.ibb.co/sWXffjH/documental12.jpg" width="450px" height="300px"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 13" data-bs-toggle="modal" data-bs-target="#modalImage13"><img src="https://i.ibb.co/52z7HSd/documental13.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 13" data-bs-toggle="modal" data-bs-target="#modalImage13"><img src="https://i.ibb.co/zHZyRx8/documental13.jpg" width="450px" height="300px"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 14" data-bs-toggle="modal" data-bs-target="#modalImage14"><img src="https://i.ibb.co/zm6rcyf/documental14.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 14" data-bs-toggle="modal" data-bs-target="#modalImage14"><img src="https://i.ibb.co/drXXj6x/documental14.jpg" width="450px" height="300px"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 15" data-bs-toggle="modal" data-bs-target="#modalImage15"><img src="https://i.ibb.co/zRyqCCM/documental15.jpg" width="450px" height="300px"> </a>            
+              <a href="#" title="Image 15" data-bs-toggle="modal" data-bs-target="#modalImage15"><img src="https://i.ibb.co/G3XC5GD/documental15.jpg" width="450px" height="300px"> </a>            
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <div class="thumbnail img-responsive">
+              <a href="#" title="Image 16" data-bs-toggle="modal" data-bs-target="#modalImage16"><img src="https://i.ibb.co/0VbDGLx/DSC-0232-jpg-FOTO-DE-CARATULA.jpg" width="450px" height="300px"> </a>            
             </div>
           </div>
   
@@ -149,7 +155,7 @@
     <div tabindex="-1" aria-labelledby="modalImage1" aria-hidden="true" class="modal fade" id="modalImage1">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/TBrPVjm/documental1.jpg">
+          <img src="https://i.ibb.co/3z9FQqj/documental1.jpg">
         </div>
       </div>
     </div>
@@ -157,7 +163,7 @@
     <div tabindex="-1" aria-labelledby="modalImage2" aria-hidden="true" class="modal fade" id="modalImage2">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/wygnRPJ/documental2.jpg">
+          <img src="https://i.ibb.co/kgz8GvJ/documental2.jpg">
         </div>
       </div>
     </div>
@@ -165,7 +171,7 @@
     <div tabindex="-1" aria-labelledby="modalImage3" aria-hidden="true" class="modal fade" id="modalImage3">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/BwQBwN4/documental3.jpg">
+          <img src="https://i.ibb.co/BVzPHJY/documental3.jpg">
         </div>
       </div>
     </div>
@@ -173,7 +179,7 @@
     <div tabindex="-1" aria-labelledby="modalImage4" aria-hidden="true" class="modal fade" id="modalImage4">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/nDRcGmF/documental4.jpg">
+          <img src="https://i.ibb.co/FqwNj6w/documental4.jpg">
         </div>
       </div>
     </div>
@@ -181,7 +187,7 @@
     <div tabindex="-1" aria-labelledby="modalImage5" aria-hidden="true" class="modal fade" id="modalImage5">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/j6jKWN9/documental5.jpg">
+          <img src="https://i.ibb.co/JdhJrkC/documental5.jpg">
         </div>
       </div>
     </div>
@@ -189,7 +195,7 @@
     <div tabindex="-1" aria-labelledby="modalImage6" aria-hidden="true" class="modal fade" id="modalImage6">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/Sc7Z9bk/documental6.jpg">
+          <img src="https://i.ibb.co/9bBQ0ZV/documental6.jpg">
         </div>
       </div>
     </div>
@@ -197,7 +203,7 @@
     <div tabindex="-1" aria-labelledby="modalImage7" aria-hidden="true" class="modal fade" id="modalImage7">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/6PmbQxK/documental7.jpg">
+          <img src="https://i.ibb.co/w7WRBsW/documental7.jpg">
         </div>
       </div>
     </div>
@@ -205,7 +211,7 @@
     <div tabindex="-1" aria-labelledby="modalImage8" aria-hidden="true" class="modal fade" id="modalImage8">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/VWRRPyH/documental8.jpg">
+          <img src="https://i.ibb.co/VDDR5yX/documental8.jpg">
         </div>
       </div>
     </div>
@@ -213,7 +219,7 @@
     <div tabindex="-1" aria-labelledby="modalImage9" aria-hidden="true" class="modal fade" id="modalImage9">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/WcwD0qm/documental9.jpg">
+          <img src="https://i.ibb.co/PFF7GNh/documental9.jpg">
         </div>
       </div>
     </div>
@@ -221,7 +227,7 @@
     <div tabindex="-1" aria-labelledby="modalImage10" aria-hidden="true" class="modal fade" id="modalImage10">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/FxVdSHL/documental10.jpg">
+          <img src="https://i.ibb.co/Rz3qZ46/documental10.jpg">
         </div>
       </div>
     </div>
@@ -229,7 +235,7 @@
     <div tabindex="-1" aria-labelledby="modalImage11" aria-hidden="true" class="modal fade" id="modalImage11">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/5RP4T0w/documental11.jpg">
+          <img src="https://i.ibb.co/d7sTZHM/documental11.jpg">
         </div>
       </div>
     </div>
@@ -237,7 +243,7 @@
     <div tabindex="-1" aria-labelledby="modalImage12" aria-hidden="true" class="modal fade" id="modalImage12">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/MhB7w6c/documental12.jpg">
+          <img src="https://i.ibb.co/sWXffjH/documental12.jpg">
         </div>
       </div>
     </div>
@@ -245,7 +251,7 @@
     <div tabindex="-1" aria-labelledby="modalImage13" aria-hidden="true" class="modal fade" id="modalImage13">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/52z7HSd/documental13.jpg">
+          <img src="https://i.ibb.co/zHZyRx8/documental13.jpg">
         </div>
       </div>
     </div>
@@ -253,7 +259,7 @@
     <div tabindex="-1" aria-labelledby="modalImage14" aria-hidden="true" class="modal fade" id="modalImage14">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/zm6rcyf/documental14.jpg">
+          <img src="https://i.ibb.co/drXXj6x/documental14.jpg">
         </div>
       </div>
     </div>
@@ -262,6 +268,14 @@
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
           <img src="https://i.ibb.co/zRyqCCM/documental15.jpg">
+        </div>
+      </div>
+    </div>
+
+    <div tabindex="-1" aria-labelledby="modalImage16" aria-hidden="true" class="modal fade" id="modalImage16">
+      <div class="modal-dialog modal-lg modal-dialog-centered">
+        <div class="modal-content">
+          <img src="https://i.ibb.co/0VbDGLx/DSC-0232-jpg-FOTO-DE-CARATULA.jpg">
         </div>
       </div>
     </div>
