--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img src="imagenes/header-index.jpg" width="100%"> <!--Acá iría el logo 1500x150-->
     </div>
 
-    <nav class="navbar navbar-expand-lg navbar fixed-top" style="background-color: #783172;" aria-label="Tenth navbar example">
+    <nav class="navbar navbar-expand-lg navbar fixed" style="background-color: #783172;" aria-label="Tenth navbar example">
         <div class="container-fluid">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -33,7 +33,7 @@
                 </li>
               
               
-              <li class="nav-item dropdown" id="current" >
+              <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" style="color: #FFF" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Portfolio
                 </a>
@@ -129,7 +129,7 @@
                 <a href="/secciones/portfolio/teatro/miserables/index.html">
                     <img src="https://i.ibb.co/xHNqmFd/miserables-caratula.jpg" alt="Los Miserables" class="card-img-top">
                 </a>    
-                    <div class="card-body" style="background-color: #783172; opacity: 65%;">
+                    <div class="card-body" style="background-color: #783172; opacity: 90%;">
                         <h5 class="card-title">Los Miserables</h5>
                         <p class="card-text">Fotografía de Teatro</p<>
                     </div>
@@ -140,7 +140,7 @@
                     <a href="/secciones/portfolio/teatro/aisa/index.html">
                         <img src="https://i.ibb.co/6Ywm1vs/aisa-caratula.jpg" alt="Los Miserables" class="card-img-top">
                     </a>    
-                        <div class="card-body" style="background-color: #783172; opacity: 65%;">
+                        <div class="card-body" style="background-color: #783172; opacity: 90%;">
                             <h5 class="card-title">Noche con Aisa</h5>
                             <p class="card-text">Fotografía de Teatro</p<>
                         </div>
@@ -151,7 +151,7 @@
                 <a href="/secciones/portfolio/teatro/jorobado/index.html">
                     <img src="https://i.ibb.co/Jk19Ksx/jorobado-caratula.jpg" alt="Los Miserables" class="card-img-top">
                 </a>    
-                    <div class="card-body" style="background-color: #783172; opacity: 65%;">
+                    <div class="card-body" style="background-color: #783172; opacity: 90%;">
                         <h5 class="card-title">El Jorobado de París</h5>
                         <p class="card-text">Fotografía de Teatro</p<>
                     </div>
