arreglo de tipografías

--- a/secciones/portfolio/teatro/partida/index.html
+++ b/secciones/portfolio/teatro/partida/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Display:ital,wght@1,300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Display:ital,wght@0,600;1,300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
     <link rel="shortcut icon" href="../../../../imagenes/favicon_Mesa de trabajo 1.png">
     <title>Iren Faraci</title>
@@ -59,7 +59,7 @@
     <br>
 
     <h2 class="titulo-principal">Fotografía de Teatro</h2>  
-    <h3>De pronto tu partida</h3>
+    <h3 class="titulo-de-obra">DE PRONTO TU PARTIDA</h3>
 
   
     <div class="container">
