--- a/secciones/portfolio/deportiva/index.html
+++ b/secciones/portfolio/deportiva/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html id="top" lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Display:ital,wght@1,300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Display:ital,wght@0,600;1,300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
     <link rel="shortcut icon" href="../../../imagenes/favicon_Mesa de trabajo 1.png">
     <title>Iren Faraci</title>
@@ -58,19 +58,7 @@
     <br>
 
     <h2 class="titulo-principal">Fotografía Deportiva</h2>  
-    <h3 class="titulo-de-obra"></h3> 
-    <div class="d-flex justify-content-center">
-        <div class="container"> 
-            <div class="row">
-                <div class="col-12">
-                    <p class="bio"> 
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non totam voluptatibus tenetur dignissimos voluptate ratione voluptas, aspernatur provident. Cumque recusandae assumenda veniam deserunt natus suscipit rem rerum perferendis, minus repudiandae.
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere ipsam suscipit ipsa distinctio explicabo nostrum id, veritatis beatae vel quis, animi, odit dolores minima tempore? Sint sed est dolorum aliquam.
-                        
-                    </p>
-                </div>
-            </div>
-        </div>
+    
     </div>   
   
     <div class="container">
@@ -515,6 +503,9 @@
     <br>
     <br>
 
+    <button style="color:yellow;">
+      <a href="#top">arriba</a>
+    </button>
 
     <div class="container">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
