--- a/secciones/portfolio/documental/index.html
+++ b/secciones/portfolio/documental/index.html
@@ -18,7 +18,7 @@
 <body class="bg-dark">
     <!-- MENÚ -->
     <div>
-        <img src="../../../imagenes/header-documental.jpg" width="100%"> <!--Acá iría el logo-->
+        <img src="../../../imagenes/header-documental.jpg" width="100%"> 
     </div>
     <nav class="navbar navbar-expand-lg navbar fixed" style="background-color: #783172;" aria-label="Tenth navbar example">
       <div class="container-fluid">
