--- a/secciones/portfolio/eventos/index.html
+++ b/secciones/portfolio/eventos/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Display:ital,wght@1,300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Display:ital,wght@0,600;1,300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
     <link rel="shortcut icon" href="../../../imagenes/favicon_Mesa de trabajo 1.png">
     <title>Iren Faraci</title>
@@ -58,9 +58,9 @@
     <br>
     <br>
 
-    <h2 class="documental-titulo">Eventos</h2>  
+    <h2 class="titulo-principal">Eventos</h2>  
 
-    <h3>Próximamente</h3>>
+    <h3 class="destacados-titulo">PRÓXIMAMENTE</h3>>
   
    
 
