correcciones títulos y textos

--- a/secciones/portfolio/documental/index.html
+++ b/secciones/portfolio/documental/index.html
@@ -61,10 +61,10 @@
     <h2 class="titulo-principal">Fotografía Documental</h2>  
     <h3 class="titulo-de-obra">COVID-19: La importancia de las vacunas</h3> 
     <div class="d-flex justify-content-center">
-        <div class="container"> 
+        <div class="container" id="container-principal"> 
             <div class="row">
                 <div class="col-12">
-                    <p class="bio"> 
+                    <p class="descripcion"> 
                         Vivimos más de un año cuidándonos, usando tapabocas, distanciándonos, extremando medidas de higiene, tratando de no contagiarnos para no enfermar y para no llevar el virus a nuestros seres queridos.
                         Por fin le llegó el turno a mi sobrina, turno que esperaba ansiosamente. Por lo que decidí hacer esta narrativa visual.
                         Mi objetivo es mostrar la importancia que tiene la vacunación, para uno y para todos los demás compatriotas.
@@ -79,7 +79,7 @@
     <div class="container">
       <hr>
         <div class="row">
-          <div class="col-lg-4 col-sm-6">
+          <div class="col-lg-4 col-sm-6" >
             <div class="thumbnail img-responsive">
               <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img src="https://i.ibb.co/3z9FQqj/documental1.jpg" width="450px" height="300px"> </a>
             </div>
