--- a/secciones/portfolio/fotoperiodismo/index.html
+++ b/secciones/portfolio/fotoperiodismo/index.html
@@ -59,19 +59,19 @@
     <br>
 
     <h2 class="titulo-principal">Fotoperiodismo</h2>  
-    <h3 class="titulo-de-obra">ACT UP Argentina</h3> 
+    <h3 class="titulo-de-obra">Act Up Argentina</h3> 
     <div class="d-flex justify-content-center">
-        <div class="container"> 
+        <div class="container" id="container-principal"> 
             <div class="row">
                 <div class="col-12">
-                    <p class="bio"> 
+                    <p class="descripcion"> 
                         En los primeros 80s, las personas gays de cualquier clase y raza no tenían derechos en los Estados Unidos. El sexo homosexual era ilegal. Nueva York no tenía legislados los derechos de los homosexuales. Te podían echar de tu departamento, de tu trabajo… podían negarse a atenderte en un restaurant o en un hotel… La homofobia familiar era la norma y la violencia contra las personas gay era muy común, incluida la violencia policial. 
                         Todo esto es una fuerza histórica tremenda. 
-                    <p class="bio">
+                    <p class="descripcion">
                         Estamos hablando de un grupo muy oprimido que prácticamente no tenía representación en los medios. De pronto aparece esta enfermedad, para la cual no había tratamientos. En 1981 cuando el sida fue identificado por primera vez, el primer artículo en el New York Times decía: “41 casos de un extraño cáncer gay”. En ese momento había gente que creía que la misma homosexualidad era una enfermedad. 
                         En los primeros cinco años, en los que en los Estados Unidos murieron 40.000 personas, al activismo le tocó repartir comida, encargarse de los cuidados básicos. No había movimiento político en sentido estricto. Las familias estaban ausentes y esa ausencia la suplió la comunidad gay. Gente que se dedicó a visitar a los enfermos, a hacerles las compras. En 1987, cuando ya íbamos 6 años de epidemia, la Corte Suprema decidió sostener las leyes contra “la sodomía”. 
                         Fue un golpe terrible. Estaban en medio de una experiencia de muerte masiva y los jueces dicen que el sexo homosexual era ilegal… Había mucha furia.</p>
-                    <p class="bio">
+                    <p class="descripcion">
                         ACT UP es un movimiento políticamente fascinante al que contribuyeron también otros factores. La ciudad de Nueva York para empezar. Les activistas eran personas muy ambiciosas que estaban a la vanguardia de una serie de ideas políticas, estéticas, sexuales… Eran muy sofisticados estéticamente porque estaban fuera de la cultura norteamericana promedio. Las personas políticamente más experimentadas eran las lesbianas que venían del movimiento de mujeres. 
                         Que tenían todos estos saberes sobre cómo organizarse, cómo analizar las situaciones, y una mirada muy radical, casi anarquista, de la política. Y los varones respondieron a estos saberes con mucho entusiasmo porque los necesitaban. Y así se creó una comunidad muy fuerte. Si esto sucediera hoy, en esta época en que los gays se casan y forman familias… las cosas habrían sido diferentes. Pero en ese momento se formó ese movimiento muy enérgico, y desesperado, y que necesitaba ser efectivo. 
                         Y al parecer cuando necesitás ser efectivo hacés las cosas de un modo distinto a cuando no necesitás ser efectivo… Y esa es una de las lecciones de ACT UP.</p>
