--- a/secciones/portfolio/producto/telares/index.html
+++ b/secciones/portfolio/producto/telares/index.html
@@ -59,7 +59,7 @@
     <br>
 
     <h2 class="producto-titulo">Fotografía de Producto</h2>  
-    <h3 class="titulo-de-obra">TELARES URBANOS</h3> 
+    <h3 class="titulo-de-obra">Telares Urbanos</h3> 
  
   
     <div class="container">
