--- a/secciones/portfolio/teatro/gala/index.html
+++ b/secciones/portfolio/teatro/gala/index.html
@@ -65,7 +65,7 @@
         <div class="container"> 
             <div class="row">
                 <div class="col-12">
-                    <p class="bio"> 
+                    <p class="descripcion"> 
                         Un evento lleno de amor y solidaridad a beneficio de la Casa del Teatro donde participaron: Hair Argentina, Lo que se nos canta y baila, De eso no se canta, Elena Roger, Nestor Fabián, Las hormigas mueven la montaña, y un musical representado por residentes de la Casa del Teatro.
                     </p>
                 </div>
