--- a/secciones/contacto/index.html
+++ b/secciones/contacto/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Display:ital,wght@1,300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Display:ital,wght@0,600;1,300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
     <link rel="shortcut icon" href="../../imagenes/favicon_Mesa de trabajo 1.png">
     <title>Iren Faraci</title>
@@ -56,7 +56,7 @@
 
     <h2 class="titulo-principal">CONTACTO</h2> 
     <div class="text-center">
-        <img class="contacto-imagen" src="../../imagenes/envelope-01.svg" height="80vh">
+        <img class="contacto-imagen" src="../../imagenes/envelope-01.png" height="80vh">
       </div>
 
     <br>
