--- a/secciones/portfolio/producto/rolon/index.html
+++ b/secciones/portfolio/producto/rolon/index.html
@@ -59,7 +59,7 @@
     <br>
 
     <h2 class="titulo-principal">Fotografía de Producto</h2>  
-    <h3 class="titulo-de-obra">ROLÓN</h3> 
+    <h3 class="titulo-de-obra">Rolón</h3> 
  
   
     <div class="container">
